update temaplte to use sidebar.

--- a/views/index.html
+++ b/views/index.html
@@ -1,133 +1,127 @@
 <div class="homepage">
 
-  <div class="container spacing-bottom-small">
+<div class="spacing-bottom-small">
     <img src="/img/perl-dancer-homepage-logo.png" class="center-block img-responsive">
-  </div>
+</div>
 
-  <div class="container">
-    <div class="jumbotron">
-      <p>The Perl Dancer Conference is a two day event on 21st and 22nd October
-      at the <a href="#location">Hotel Schani Wien</a>.</p>
-      <p>For those wanting a longer experience we are running two days of
-      training courses prior to the main conference on the 19th and 20th
-      October at <a href="#location">Amerikahaus</a> in Vienna.
-      Training course places are limited so
-      please <a href="/tickets">book early</a> to guarantee your seat.</p>
-      <p>Running alongside the training days we will be running a hackathon
-      - further details will be made available soon.</p>
-    </div>
-  </div>
+<div class="well">
+    <p>The Perl Dancer Conference is a two day event on 21st and 22nd October
+    at the <a href="#location">Hotel Schani Wien</a>.</p>
+    <p>For those wanting a longer experience we are running two days of
+    training courses prior to the main conference on the 19th and 20th
+    October at <a href="#location">Amerikahaus</a> in Vienna.
+    Training course places are limited so
+    please <a href="/tickets">book early</a> to guarantee your seat.</p>
+    <p>Running alongside the training days we will be running a hackathon
+    - further details will be made available soon.</p>
+</div>
 
-  <div class="container main-carousel-container">
+<div class="main-carousel-container">
     <div id="main-carousel" class="carousel slide" data-ride="carousel" data-interval="7500">
-      <ol class="carousel-indicators">
-        <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
-        <li data-target="#main-carousel" data-slide-to="1"></li>
-        <li data-target="#main-carousel" data-slide-to="2"></li>
-        <li data-target="#main-carousel" data-slide-to="3"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="slider-item item active">
-          <img class="img-responsive" src="/img/perldance-2014-sawyerx.jpg" alt="">
-          <div class="carousel-caption">
-            <p>Perl Dancer Conference 2014</p>
-          </div>
+        <ol class="carousel-indicators">
+            <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#main-carousel" data-slide-to="1"></li>
+            <li data-target="#main-carousel" data-slide-to="2"></li>
+            <li data-target="#main-carousel" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="slider-item item active">
+                <img class="img-responsive" src="/img/perldance-2014-sawyerx.jpg" alt="">
+                <div class="carousel-caption">
+                    <p>Perl Dancer Conference 2014</p>
+                </div>
+            </div>
+            <div class="slider-item item">
+                <img class="img-responsive" src="/img/perldance-2014-modern-tech.jpg" alt="">
+                <div class="carousel-caption">
+                    <p>Perl Dancer Conference 2014</p>
+                </div>
+            </div>
+            <div class="slider-item item">
+                <img class="img-responsive" src="/img/perldance-2014-security.jpg" alt="">
+                <div class="carousel-caption">
+                    <p>Perl Dancer Conference 2014</p>
+                </div>
+            </div>
+            <div class="slider-item item">
+                <img class="img-responsive" src="/img/perldance-2014-organisers.jpg" alt="">
+                <div class="carousel-caption">
+                    <p>Perl Dancer Conference 2014</p>
+                </div>
+            </div>
         </div>
-        <div class="slider-item item">
-          <img class="img-responsive" src="/img/perldance-2014-modern-tech.jpg" alt="">
-          <div class="carousel-caption">
-            <p>Perl Dancer Conference 2014</p>
-          </div>
-        </div>
-        <div class="slider-item item">
-          <img class="img-responsive" src="/img/perldance-2014-security.jpg" alt="">
-          <div class="carousel-caption">
-            <p>Perl Dancer Conference 2014</p>
-          </div>
-        </div>
-        <div class="slider-item item">
-          <img class="img-responsive" src="/img/perldance-2014-organisers.jpg" alt="">
-          <div class="carousel-caption">
-            <p>Perl Dancer Conference 2014</p>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#main-carousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
-      <a class="right carousel-control" href="#main-carousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a>
+        <a class="left carousel-control" href="#main-carousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a>
+        <a class="right carousel-control" href="#main-carousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a>
     </div>
-  </div>
+</div>
 
-  <div class="has_news">
-    <!-- new goes here if there is any - news.html -->
-  </div>
-
-  <div class="container register-container">
+<div class="egister-container">
     <div class="center-block">
-      <h1 class="text-center subscribe">Register now!</h1>
-      <form class="text-center form-inline" method="post" action="/register" name="register-email">
-        <div class="form-group">
-          <input class="form-control" type="email" name="username" size="30" required placeholder="Please enter your email address">
-          <input class="btn btn-primary" type="submit" value="Register">
-        </div>
-      </form>
+        <h1 class="text-center subscribe">Register now!</h1>
+        <form class="text-center form-inline" method="post" action="/register" name="register-email">
+            <div class="form-group">
+                <input class="form-control" type="email" name="username" size="30" required placeholder="Please enter your email address">
+                <input class="btn btn-primary" type="submit" value="Register">
+            </div>
+        </form>
     </div>
-  </div>
+</div>
 
-  <div class="container">
-    <h1 class="text-center subscribe">Speakers</h1>
-    <div class="speaker-item-wrapper">
-      <!-- fragments/speakers.html -->
+<h1 class="text-center subscribe">Speakers</h1>
+<div class="speaker-item-wrapper">
+    <!-- fragments/speakers.html -->
+</div>
+
+<div class="has_news">
+    <!-- new goes here if there is any - news.html -->
+</div>
+
+
+<h1>What people say about our conference</h1>
+<div class="row">
+    <div class="col-md-4">
+        <blockquote>
+            <p>Rare opportunity to meet web developers who really work in the trenches. I am surely coming again!</p>
+            <footer>Bill Carr <cite>CEO, Bottlenose</cite></footer>
+        </blockquote>
     </div>
-  </div>
-
-  <div class="container text-center">
-    <h1>What people say about our conference</h1>
-    <div class="row">
-      <div class="col-md-4">
+    <div class="col-md-4">
         <blockquote>
-          <p>Rare opportunity to meet web developers who really work in the trenches. I am surely coming again!</p>
-          <footer>Bill Carr <cite>CEO, Bottlenose</cite></footer>
+            <p>I am coming for the third year. It feels almost at home. I am looking forward to Vienna this year!</p>
+            <footer>Jure Kodžoman <cite>Informa Studio</cite></footer>
         </blockquote>
-      </div>
-      <div class="col-md-4">
-        <blockquote>
-          <p>I am coming for the third year. It feels almost at home. I am looking forward to Vienna this year!</p>
-          <footer>Jure Kodžoman <cite>Informa Studio</cite></footer>
-        </blockquote>
-      </div>
-      <div class="col-md-4">
-        <blockquote>
-          <p>First time I went because it was close by. Now I am ready to travel across the world just to go again. </p>
-          <footer>Sam Batschelet <cite>WBA, NY, USA</cite></footer>
-        </blockquote>
-      </div>
     </div>
-  </div>
+    <div class="col-md-4">
+        <blockquote>
+            <p>First time I went because it was close by. Now I am ready to travel across the world just to go again. </p>
+            <footer>Sam Batschelet <cite>WBA, NY, USA</cite></footer>
+        </blockquote>
+    </div>
+</div>
 
-  <div class="container">
-    <h1 class="text-center" id="location">Location</h1>
-    <div class="row">
+<h1 class="text-center" id="location">Location</h1>
+<div class="row">
 
-      <div class="col-md-6">
+    <div class="col-md-6">
         <div class="location">
-          <div class="location-title"><a href="#" id="marker1">Training Venue</a> - Amerikahaus - 19/20 Oct</div>
-          <div>
-            <i class="fa fa-location-arrow"></i> <span class="location-address">Friedrich-Schmidt-Platz 2, 1010 Vienna, Austria</span>
-          </div>
+            <div class="location-title"><a href="#" id="marker1">Training Venue</a> - Amerikahaus - 19/20 Oct</div>
+            <div>
+                <i class="fa fa-location-arrow"></i> <span class="location-address">Friedrich-Schmidt-Platz 2, 1010 Vienna, Austria</span>
+            </div>
         </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="location">
-          <div class="location-title"><a href="#" id="marker2">Conference Venue</a> - <a href="http://www.hotelschani.com/1/home/" target="_blank">Hotel Schani Wien</a> 21/22 Oct</div>
-          <div>
-            <i class="fa fa-location-arrow"></i> <span class="location-address">Karl-Popper-Straße 22, 1100 Vienna, Austria</span>
-          </div>
-        </div>
-      </div>
-
     </div>
-    <div id="map"></div>
-  </div>
+
+    <div class="col-md-6">
+        <div class="location">
+            <div class="location-title"><a href="#" id="marker2">Conference Venue</a> - <a href="http://www.hotelschani.com/1/home/" target="_blank">Hotel Schani Wien</a> 21/22 Oct</div>
+            <div>
+                <i class="fa fa-location-arrow"></i> <span class="location-address">Karl-Popper-Straße 22, 1100 Vienna, Austria</span>
+            </div>
+        </div>
+    </div>
+
+</div>
+<div id="map"></div>
+</div>
 
 </div>
