--- a/views/news.html
+++ b/views/news.html
@@ -1,4 +1,4 @@
-<div class="container news-container">
+<div class="news-container">
     <h1 class="text-center">News</h1>
     <div class="panel panel-default news-item">
       <div class="panel-heading">
