update all templates to allow multi-column layout to be introduced
This basically means that content is now wrapped in div.container in
mani layout and .container has been removed from all templates. Also had
to make a route change to allow this to work for speaker page.

--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,9 @@
 <div class="homepage">
 
-  <div class="container spacing-bottom-small">
+  <div class="spacing-bottom-small">
     <img src="/img/perl-dancer-homepage-logo.png" class="center-block img-responsive">
   </div>
 
-  <div class="container">
     <div class="jumbotron">
       <p>The Perl Dancer Conference is a two day event on 21st and 22nd October
       at the <a href="#location">Hotel Schani Wien</a>.</p>
@@ -16,9 +15,8 @@
       <p>Running alongside the training days we will be running a hackathon
       - further details will be made available soon.</p>
     </div>
-  </div>
 
-  <div class="container main-carousel-container">
+  <div class="main-carousel-container">
     <div id="main-carousel" class="carousel slide" data-ride="carousel" data-interval="7500">
       <ol class="carousel-indicators">
         <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
@@ -61,7 +59,7 @@
     <!-- new goes here if there is any - news.html -->
   </div>
 
-  <div class="container register-container">
+  <div class="register-container">
     <div class="center-block">
       <h1 class="text-center subscribe">Register now!</h1>
       <form class="text-center form-inline" method="post" action="/register" name="register-email">
@@ -73,14 +71,12 @@
     </div>
   </div>
 
-  <div class="container">
     <h1 class="text-center subscribe">Speakers</h1>
     <div class="speaker-item-wrapper">
       <!-- fragments/speakers.html -->
     </div>
-  </div>
 
-  <div class="container text-center">
+  <div class="text-center">
     <h1>What people say about our conference</h1>
     <div class="row">
       <div class="col-md-4">
@@ -104,7 +100,6 @@
     </div>
   </div>
 
-  <div class="container">
     <h1 class="text-center" id="location">Location</h1>
     <div class="row">
 
@@ -128,6 +123,5 @@
 
     </div>
     <div id="map"></div>
-  </div>
 
 </div>
