--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -105,7 +105,9 @@
       </div>
     </div>
 
-    <div class="content"></div>
+    <div class="container">
+      <div class="content"></div>
+    </div>
     
     <div class="footer">
       <div class="copyright-container container">
