--- a/views/speakers.html
+++ b/views/speakers.html
@@ -1,6 +1,4 @@
-<div class="container">
   <p>Our impressive list of speakers leaves no doubt: Perl Dancer 2015 is a must. Even if you are not a Perl Hacker our speakers will share knowledge useful to anyone working as a web developer. Don't miss the opportunity to meet them.</p>
-</div>
-<div class="container speaker-item-wrapper">
+<div class="speaker-item-wrapper">
   <!-- fragments/speakers.html -->
 </div>
