--- a/views/tickets.html
+++ b/views/tickets.html
@@ -1,6 +1,6 @@
 <div class="ticket-wrapper"><!-- tickets fragment --></div>
 
-<div class="container text-center">
+<div class="text-center">
   <h2>Hurry up!</h2>
   <p>We have only 60 seats available!</p>
   <div class="countdown-timer"><!-- countdown timer --></div>
