complete sponsors sidebar closes #5 #26 #59
Many thanks to @batschelet for the initial work.

--- a/views/fragments/tickets.html
+++ b/views/fragments/tickets.html
@@ -1,5 +1,5 @@
-  <div class="row text-center tickets-container">
-    <div class="col-sm-6 tickets">
+  <div class="row text-center tickets-container equal-height-container">
+    <div class="col-sm-6 tickets equal-height-column">
       <div class="ticket-header">
         <div class="short_description">Ticket name</div>
         <div class="price">0.00</div>
