--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <img src="/img/perl-dancer-homepage-logo.png" class="center-block img-responsive">
   </div>
 
-    <div class="jumbotron">
+    <div class="well">
       <p>The Perl Dancer Conference is a two day event on 21st and 22nd October
       at the <a href="#location">Hotel Schani Wien</a>.</p>
       <p>For those wanting a longer experience we are running two days of
