--- a/views/fragments/sidebar.html
+++ b/views/fragments/sidebar.html
@@ -7,7 +7,7 @@
     <a href="http://www.linuxia.de/"><img src="/img/linuxia-logo.png" class="center-block img-responsive"></a>
   </div>
   <div>
-    <h5 class="text-center"><a href="http://www.sysnix.com/">Sysnix Consultants</a></h5>
+    <a href="http://www.sysnix.com/"><img src="/img/sysnix-logo-small.png" class="center-block img-responsive"></a>
   </div>
   <h4 class="text-center"><a href="/sponsoring">Become a sponsor</a></h4>
 </div>
@@ -15,6 +15,6 @@
   <h4 class="text-center">Partners</h4>
   <div>
   <div>
-    <h5 class="text-center"><a href="http://perlweekly.com/">Perl Weekly</a></h5>
+    <a href="http://perlweekly.com/"><img src="/img/perl-weekly.png" class="center-block img-responsive"></a>
   </div>
 </div>
