Replace text for early talk proposals.

--- a/views/cfp.html
+++ b/views/cfp.html
@@ -7,8 +7,7 @@
     <p>
     Each presentation will last either 20 or 40 minutes after which there will be time for questions.
     </p>
-    <p>The submission deadline is August 31th, midnight CET. Please note that we will be starting to accept talks earlier than
-    the deadline and these will be given a priority on the schedule.
+    <p>The submission deadline is August 31th, midnight CET. Proposals will be reviewed within a few days after the deadline.
     </p>
   </div>
   <h2 class="stunning-text-title">Suggested Topics</h2>
