switch register/reset_password to use DTV plugin

--- a/views/register_reset.html
+++ b/views/register_reset.html
@@ -1,7 +1,7 @@
   <div class="center-block">
     <h2 class="text-center action_name">Do something</h2>
     <div class="text text-center">Some text about what is going on.</div>
-    <form class="text-center form-inline form register-email" name="register-email" method="post" action="/register">
+    <form class="text-center form-inline form register-email" name="register-reset" method="post" action="/register">
       <div class="form-group username_input">
         <input class="form-control" type="email" name="username" size="30" required placeholder="Please enter your email address">
         <div class="help-block username_error"></div>
