--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
   <div class="register-container">
     <div class="center-block">
       <h1 class="text-center subscribe">Register now!</h1>
-      <form class="text-center form-inline" method="post" action="/register" name="register-email">
+      <form class="text-center form-inline" method="post" action="/register" name="register-reset">
         <div class="form-group">
           <input class="form-control" type="email" name="username" size="30" required placeholder="Please enter your email address">
           <input class="btn btn-primary" type="submit" value="Register">
